@@ -56,3 +56,16 @@ configurations {
         exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
     }
 }
+
+//compileJava {
+//    options.compilerArgs += [
+//            '-Xlint:unchecked',
+//            '-Xlint:deprecation',
+//            '--add-exports=java.desktop/sun.font=ALL-UNNAMED',
+//            '--add-exports=java.base/sun.reflect.generics.tree=ALL-UNNAMED',
+//            '--add-exports=java.base/sun.net.www.protocol.ftp=ALL-UNNAMED',
+//            '-AmapstructSpi.enumPostfixOverrides=com.taotao.cloud.log.api.grpc.EnumPostfixOverrideProtos=INVALID'
+//    ]
+//}
+
+
